--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -25,9 +25,9 @@ kafka.eagle.offset.storage=kafka
 ######################################
 kafka.eagle.mail.enable=true
 kafka.eagle.mail.sa=alert_sa
-kafka.eagle.mail.username=alert_sa@163.com
-kafka.eagle.mail.password=mqslimczkdqabbbg
-kafka.eagle.mail.server.host=smtp.163.com
+kafka.eagle.mail.username=alert_sa@126.com
+kafka.eagle.mail.password=123456
+kafka.eagle.mail.server.host=smtp.126.com
 kafka.eagle.mail.server.port=25
 
 ######################################
