--- a/kafka-eagle-core/pom.xml
+++ b/kafka-eagle-core/pom.xml
@@ -7,59 +7,64 @@
 		<version>1.2.1</version>
 	</parent>
 	<artifactId>kafka-eagle-core</artifactId>
+
+	<repositories>
+		<repository>
+			<id>nexus</id>
+			<name>nexus</name>
+			<url>http://central.maven.org/maven2/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<!-- Reference to other modules -->
+
+	<properties>
+		<calcite.version>1.6.0</calcite.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.smartloli.kafka.eagle</groupId>
 			<artifactId>kafka-eagle-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<!-- Calcite Adapter -->
 		<dependency>
 			<groupId>org.apache.calcite</groupId>
 			<artifactId>calcite-core</artifactId>
-			<version>1.6.0</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.codehaus.janino</groupId>
-					<artifactId>commons-compiler</artifactId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jackson-core</artifactId>
-					<groupId>com.fasterxml.jackson.core</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jackson-databind</artifactId>
-					<groupId>com.fasterxml.jackson.core</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>calcite-avatica</artifactId>
-					<groupId>org.apache.calcite</groupId>
-				</exclusion>
-			</exclusions>
+			<version>${calcite.version}</version>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.apache.calcite</groupId>
 			<artifactId>calcite-avatica</artifactId>
 			<version>1.6.0</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>jackson-core</artifactId>
-					<groupId>com.fasterxml.jackson.core</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jackson-databind</artifactId>
-					<groupId>com.fasterxml.jackson.core</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jackson-annotations</artifactId>
-					<groupId>com.fasterxml.jackson.core</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>org.apache.calcite</groupId>
 			<artifactId>calcite-linq4j</artifactId>
-			<version>1.6.0</version>
+			<version>${calcite.version}</version>
 		</dependency>
+		
+		<!-- ignite -->
+		<dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-spring</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-indexing</artifactId>
+            <version>2.3.0</version>
+        </dependency>
 	</dependencies>
 </project>
