--- a/kafka-eagle-common/pom.xml
+++ b/kafka-eagle-common/pom.xml
@@ -8,6 +8,10 @@
 	</parent>
 	<artifactId>kafka-eagle-common</artifactId>
 
+	<properties>
+		<fasterxml.version>2.9.5</fasterxml.version>
+	</properties>
+
 	<repositories>
 		<repository>
 			<id>nexus</id>
@@ -97,17 +101,17 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.8.7</version>
+			<version>${fasterxml.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.8.7</version>
+			<version>${fasterxml.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.8.7</version>
+			<version>${fasterxml.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.xerial</groupId>
