--- a/kafka-eagle-core/pom.xml
+++ b/kafka-eagle-core/pom.xml
@@ -66,5 +66,10 @@
             <artifactId>ignite-indexing</artifactId>
             <version>2.3.0</version>
         </dependency>
+	<dependency>
+		<groupId>com.alibaba</groupId>
+		<artifactId>druid</artifactId>
+		<version>1.0.19</version>
+	</dependency>
 	</dependencies>
 </project>
