--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,8 +1,8 @@
 ######################################
 # multi zookeeper&kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster2,cluster1
-cluster2.zk.list=dn1:2181,dn2:2181,dn3:2181
+kafka.eagle.zk.cluster.alias=cluster1
+#cluster2.zk.list=dn1:2181,dn2:2181,dn3:2181
 cluster1.zk.list=127.0.0.1:2181
 
 ######################################
@@ -19,7 +19,7 @@ kafka.eagle.webui.port=8048
 # kafka offset storage
 ######################################
 cluster1.kafka.eagle.offset.storage=kafka
-cluster2.kafka.eagle.offset.storage=kafka
+#cluster2.kafka.eagle.offset.storage=kafka
 
 ######################################
 # enable kafka metrics
