--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,12 +1,12 @@
 ######################################
 # multi zookeeper&kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1
+kafka.eagle.zk.cluster.alias=cluster1,cluster4
 #cluster2.zk.list=dn1:2181,dn2:2181,dn3:2181
 cluster1.zk.list=vmn1:2181
 #cluster2.zk.list=vmn2:2181
 #cluster3.zk.list=vmn3:2181
-#cluster4.zk.list=vmn4:2181
+cluster4.zk.list=vmn4:2181
 
 ######################################
 # zk client thread limit
@@ -24,7 +24,7 @@ kafka.eagle.webui.port=8048
 cluster1.kafka.eagle.offset.storage=zookeeper
 #cluster2.kafka.eagle.offset.storage=kafka
 #cluster3.kafka.eagle.offset.storage=kafka
-#cluster4.kafka.eagle.offset.storage=kafka
+cluster4.kafka.eagle.offset.storage=kafka
 
 ######################################
 # enable kafka metrics
