--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,9 +2,9 @@
 # multi zookeeper&kafka cluster list
 ######################################
 
-kafka.eagle.zk.cluster.alias=cluster1,cluster4
+kafka.eagle.zk.cluster.alias=cluster1
 #cluster2.zk.list=dn1:2181,dn2:2181,dn3:2181
-cluster1.zk.list=vmn1:2181
+cluster1.zk.list=127.0.0.1:2181
 #cluster2.zk.list=vmn2:2181
 #cluster3.zk.list=vmn3:2181
 cluster4.zk.list=vmn4:2181
@@ -22,7 +22,7 @@ kafka.eagle.webui.port=8048
 ######################################
 # kafka offset storage
 ######################################
-cluster1.kafka.eagle.offset.storage=zookeeper
+cluster1.kafka.eagle.offset.storage=kafka
 #cluster2.kafka.eagle.offset.storage=kafka
 #cluster3.kafka.eagle.offset.storage=kafka
 cluster4.kafka.eagle.offset.storage=kafka
@@ -84,12 +84,12 @@ kafka.eagle.sasl.mechanism=PLAIN
 ######################################
 # kafka jdbc driver address
 ######################################
-kafka.eagle.driver=com.mysql.jdbc.Driver
-kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke3?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-kafka.eagle.username=root
-kafka.eagle.password=123456
-
-#kafka.eagle.driver=org.sqlite.JDBC
-#kafka.eagle.url=jdbc:sqlite:/Users/dengjie/workspace/kafka-egale/kafka-eagle-web/src/main/resources/db/ke.db
+#kafka.eagle.driver=com.mysql.jdbc.Driver
+#kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke3?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #kafka.eagle.username=root
-#kafka.eagle.password=root
+#kafka.eagle.password=123456
+
+kafka.eagle.driver=org.sqlite.JDBC
+kafka.eagle.url=jdbc:sqlite:/Users/dengjie/workspace/kafka-egale/kafka-eagle-web/src/main/resources/db/ke.db
+kafka.eagle.username=root
+kafka.eagle.password=root
