--- a/kafka-eagle-common/pom.xml
+++ b/kafka-eagle-common/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.smartloli.kafka.eagle</groupId>
 		<artifactId>kafka-eagle</artifactId>
-		<version>1.4.0</version>
+		<version>1.4.1</version>
 	</parent>
 	<artifactId>kafka-eagle-common</artifactId>
 
@@ -26,6 +26,17 @@
 	</repositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.huawei</groupId>
+			<artifactId>kafka-security</artifactId>
+			<version>1.2</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>*</artifactId>
+					<groupId>*</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
@@ -118,7 +129,6 @@
 			<version>2.3.1</version>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
