--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,17 +1,22 @@
 ######################################
 # multi zookeeper&kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1
-#cluster1.zk.list=dn1:2181,dn2:2181,dn3:2181
+kafka.eagle.zk.cluster.alias=cluster2
 cluster1.zk.list=3.106.11.103:21816
+cluster2.zk.list=3.106.11.103:21816
+cluster3.zk.list=127.0.0.1:2181/scram
+cluster4.zk.list=vmn4:2181
+
 ######################################
 # zk client thread limit
 ######################################
-kafka.zk.limit.size=20
+kafka.zk.limit.size=25
+
 ######################################
 # kafka eagle webui port
 ######################################
 kafka.eagle.webui.port=8048
+
 ######################################
 # kafka offset storage
 ######################################
@@ -19,33 +24,40 @@ cluster1.kafka.eagle.offset.storage=kafka
 cluster2.kafka.eagle.offset.storage=kafka
 #cluster3.kafka.eagle.offset.storage=kafka
 cluster4.kafka.eagle.offset.storage=kafka
+
 ######################################
 # kafka metrics, 30 days by default
 ######################################
 kafka.eagle.metrics.charts=true
 kafka.eagle.metrics.retain=30
+
+
 ######################################
 # kafka sql topic records max
 ######################################
 kafka.eagle.sql.topic.records.max=5000
 kafka.eagle.sql.fix.error=false
+
 ######################################
 # delete kafka topic token
 ######################################
 kafka.eagle.topic.token=keadmin
+
 ######################################
 # kafka sasl authenticate
 ######################################
-#cluster1.kafka.eagle.sasl.enable=false
-#cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-#cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
-#cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
-#cluster1.kafka.eagle.sasl.client.id=
-cluster1.kafka.eagle.sasl.enable=true
+cluster1.kafka.eagle.sasl.enable=false
 cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster1.kafka.eagle.sasl.mechanism=PLAIN
-cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.ExtPlainLoginModule required username="admin" password="5Eqd/QwqPrurz1NEK7ne6w==:-TjqU1+utoE0EQfA";
+cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
+cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
 cluster1.kafka.eagle.sasl.client.id=
+
+cluster2.kafka.eagle.sasl.enable=true
+cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
+cluster2.kafka.eagle.sasl.mechanism=PLAIN
+cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.ExtPlainLoginModule required username="admin" password="5Eqd/QwqPrurz1NEK7ne6w==:-TjqU1+utoE0EQfA";
+cluster2.kafka.eagle.sasl.client.id=
+
 ######################################
 # kafka jdbc driver address
 ######################################
@@ -53,7 +65,8 @@ kafka.eagle.driver=com.mysql.jdbc.Driver
 kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 kafka.eagle.username=root
 kafka.eagle.password=123456
+
 #kafka.eagle.driver=org.sqlite.JDBC
 #kafka.eagle.url=jdbc:sqlite:/Users/dengjie/webserver/hadoop/sqlite/ke.db
 #kafka.eagle.username=root
-#kafka.eagle.password=123456
+#kafka.eagle.password=root
