--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -1,9 +1,9 @@
 ######################################
 # multi zookeeper&kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=3.106.11.103:21816
-#cluster2.zk.list=xdn10:2181,xdn11:2181,xdn12:2181
+kafka.eagle.zk.cluster.alias=cluster1,cluster2
+cluster1.zk.list=tdn1:2181,tdn2:2181,tdn3:2181
+cluster2.zk.list=xdn10:2181,xdn11:2181,xdn12:2181
 
 ######################################
 # zk client thread limit
@@ -57,16 +57,16 @@ cluster2.kafka.eagle.sasl.client.id=
 ######################################
 # kafka sqlite jdbc driver address
 ######################################
-#kafka.eagle.driver=org.sqlite.JDBC
-#kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
-#kafka.eagle.username=root
-#kafka.eagle.password=www.kafka-eagle.org
+kafka.eagle.driver=org.sqlite.JDBC
+kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
+kafka.eagle.username=root
+kafka.eagle.password=www.kafka-eagle.org
 
 ######################################
 # kafka mysql jdbc driver address
 ######################################
-kafka.eagle.driver=com.mysql.jdbc.Driver
-kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-kafka.eagle.username=root
-kafka.eagle.password=123456
+#kafka.eagle.driver=com.mysql.jdbc.Driver
+#kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#kafka.eagle.username=root
+#kafka.eagle.password=123456
 
