--- a/kafka-eagle-common/pom.xml
+++ b/kafka-eagle-common/pom.xml
@@ -9,6 +9,7 @@
 
 	<properties>
 		<fasterxml.version>2.8.4</fasterxml.version>
+		<calcite.version>1.21.0</calcite.version>
 	</properties>
 
 	<repositories>
@@ -116,6 +117,12 @@
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 			<version>2.3.1</version>
+		</dependency>
+		<!-- calcite adapter -->
+		<dependency>
+			<groupId>org.apache.calcite</groupId>
+			<artifactId>calcite-core</artifactId>
+			<version>${calcite.version}</version>
 		</dependency>
 	</dependencies>
 </project>
