--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -11,7 +11,7 @@ cluster4.zk.list=127.0.0.1:2182
 ######################################
 # zookeeper enable acl
 ######################################
-cluster4.zk.acl.enable=true
+cluster4.zk.acl.enable=false
 cluster4.zk.acl.schema=digest
 cluster4.zk.acl.username=test
 cluster4.zk.acl.password=test123
