--- a/kafka-eagle-web/src/main/webapp/WEB-INF/web.xml
+++ b/kafka-eagle-web/src/main/webapp/WEB-INF/web.xml
@@ -62,6 +62,10 @@
 	</filter-mapping>
 	<!-- shiro end -->
 	<error-page>
+		<error-code>403</error-code>
+		<location>/errors/403</location>
+	</error-page>
+	<error-page>
 		<error-code>404</error-code>
 		<location>/errors/404</location>
 	</error-page>
