--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -37,7 +37,7 @@ cluster2.kafka.eagle.offset.storage=zk
 ######################################
 # kafka metrics, 15 days by default
 ######################################
-kafka.eagle.metrics.charts=false
+kafka.eagle.metrics.charts=true
 kafka.eagle.metrics.retain=15
 
 
@@ -45,7 +45,7 @@ kafka.eagle.metrics.retain=15
 # kafka sql topic records max
 ######################################
 kafka.eagle.sql.topic.records.max=5000
-kafka.eagle.sql.fix.error=false
+kafka.eagle.sql.fix.error=true
 
 ######################################
 # delete kafka topic token
