--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,7 +2,7 @@
 # multi zookeeper & kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=127.0.0.1:2181
+cluster1.zk.list=127.0.0.1:2181/ssl
 cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
@@ -87,7 +87,7 @@ cluster4.kafka.eagle.sasl.client.id=
 ######################################
 # kafka ssl authenticate
 ######################################
-cluster1.kafka.eagle.ssl.enable=false
+cluster1.kafka.eagle.ssl.enable=true
 cluster1.kafka.eagle.ssl.protocol=SSL
 cluster1.kafka.eagle.ssl.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
 cluster1.kafka.eagle.ssl.truststore.password=ke123456
